test/should-fail/return-type-conv改.j
type unit extends handle

function a takes handle h returns unit
	return h
endfunction